--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -15,6 +15,11 @@
 		<a href="/about/">概要</a>
 		<a href="/blog">ブログ</a>
 		<h1>私のAstro学習ブログ</h1>
-		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>\
+		<ul>
+			<li><a href="/posts/post-1/">記事1</a></li>
+			<li><a href="/posts/post-2/">記事2</a></li>
+			<li><a href="/posts/post-3/">記事3</a></li>
+		</ul>
 	</body>
 </html>
