--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
-
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
 ---
 
 <html lang="ja">
@@ -11,15 +13,17 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">ホーム</a>
-		<a href="/about/">概要</a>
-		<a href="/blog">ブログ</a>
+		<Header />
 		<h1>私のAstro学習ブログ</h1>
-		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>\
+		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
 		<ul>
 			<li><a href="/posts/post-1/">記事1</a></li>
 			<li><a href="/posts/post-2/">記事2</a></li>
 			<li><a href="/posts/post-3/">記事3</a></li>
 		</ul>
+		<Footer />
+		<script>
+			import '../scripts/menu.js';
+		</script>
 	</body>
 </html>
